update code menumenu